--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "rms",
   "license": "ISC",
   "dependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -20,22 +25,23 @@
     "@babel/preset-env": "7.12.1",
     "@babel/preset-react": "7.12.5",
     "babel-loader": "^8.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "node-sass": "^5.0.0",
-    "css-loader": "^5.0.1",
+    "open-browser-webpack4-plugin": "^1.0.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^9.4.2",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "html-webpack-plugin": "^4.5.0",
-    "open-browser-webpack4-plugin": "^1.0.0"
+    "webpack-merge": "^5.8.0"
   }
 }
