--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,44 @@
       }
     ],
     "no-unused-vars": "warn",
-    "no-use-before-define": "off"
+    "no-use-before-define": "off",
+    "import/no-unresolved": [
+      "error",
+      {
+        "ignore": [
+          ".png$",
+          ".webp$",
+          ".jpg$"
+        ]
+      }
+    ],
+    "import/extensions": [
+      "error",
+      "never",
+      {
+        "svg": "always"
+      }
+    ]
+  },
+  "settings": {
+    "import/resolver": {
+      "alias": {
+        "map": [
+          [
+            "pages",
+            "./src/pages"
+          ]
+        ],
+        "extensions": [
+          ".ts",
+          ".tsx",
+          ".js",
+          ".jsx",
+          ".jsx",
+          ".json",
+          ".d.ts"
+        ]
+      }
+    }
   }
 }
