js/css打包分离 本地/远程mock配置 性能优化 开发工具库配置

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,10 @@
           [
             "pages",
             "./src/pages"
+          ],
+          [
+            "@utils",
+            "./src/utils"
           ]
         ],
         "extensions": [
