--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack server --progress --config config/webpack.dev.config.js",
-    "build": "webpack --progress --config config/webpack.prod.config.js"
+    "build": "NODE_ENV=production webpack --progress --config config/webpack.prod.config.js"
   },
   "keywords": [],
   "author": "rms",
@@ -18,6 +18,10 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "antd": "^4.16.7",
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.6",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -42,9 +46,11 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^5.0.0",
     "open-browser-webpack4-plugin": "^1.0.0",
     "sass-loader": "^10.1.0",
+    "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^9.4.2",
     "webpack": "^5.4.0",
